--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-image: url(/bg.jpeg);
+    background-image: url(bg.jpeg);
     background-size: cover;
     overflow: hidden;
 }
